<resources>
    <string name="app_name">MiniMoneybox</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <string name="email_empty_error">Email field can\'t be empty!</string>
    <string name="password_empty_error">Password field can\'t be empty</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="stocks_and_share_isa">Stocks and Share ISA</string>
    <string name="plan_value">Plan Value :</string>
    <string name="moneybox">Moneybox :</string>
    <string name="plan_data">Plan Data</string>
    <string name="moneybox_data">MoneyBox data</string>
    <string name="mb">mb</string>
    <string name="total_plan">Total Plan Value:</string>
    <string name="user_accounts">User Accounts</string>
    <string name="_300">300</string>
    <string name="individual_account">Individual Account</string>
    <string name="pound_sign">£</string>
    <string name="add_10">Add £10</string>
</resources>
