<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_classic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

            <TextView
                    android:id="@+id/heading"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/stocks_and_share_isa"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/plan_value_tv"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"
                    android:text="@string/plan_value"/>

            <TextView
                    android:id="@+id/plan_value"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/plan_data"
                    android:layout_marginStart="20dp"/>

            <ImageView
                    android:id="@+id/play_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="100dp"
                    app:srcCompat="@drawable/play_image"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/moneybox_tv"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"
                    android:text="@string/moneybox"/>

            <TextView
                    android:id="@+id/moneybox_value"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/moneybox_data"
                    android:layout_marginStart="20dp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

