<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.individualAccount.IndividualAccountActivity">


    <LinearLayout
            android:id="@+id/user_acc_details"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp">

        <TextView
                android:id="@+id/individual_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/individual_account"/>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textSize="20sp"
                    android:text="@string/plan_value"/>

            <TextView
                    android:id="@+id/plan_value_in"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textSize="20sp"
                    android:text="@string/moneybox"/>

            <TextView
                    android:id="@+id/moneybox_in"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/add_button"
            style="@style/Widget.Button.Colored.Rounded"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:text="@string/add_10"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/user_acc_details"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>